# peastest

./: Greeter.vala  Makefile  PeasGeany.vala  main.vala  pluginprovider.c
exts/: extension.plugin  extension.py  vala_ext.plugin  vala_ext.vala
geany/: Makefile  Makefile.am  Makefile.in  peas-plugin-loader-geany.c  peas-plugin-loader-geany.h
geany/.deps/: peas-plugin-loader-geany.Plo
